# gy521_rp2040

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json
include/: default.h  gy521.h
src/: CMakeLists.txt  default.c  gy521.c  main.c
